feat(settings): add thinking budget control for OpenAI-compatible providers
- Add ThinkingBudgetToggle component with configurable token limits
- Implement thinking configuration in OpenAI API requests
- Update model info to support thinking mode and max thinking tokens
- Add internationalization support across 18 languages
- Ensure compatibility with Claude's thinking budget feature

--- a/webview-ui/src/i18n/locales/ca/settings.json
+++ b/webview-ui/src/i18n/locales/ca/settings.json
@@ -259,7 +259,9 @@
 			"medium": "Mitjà",
 			"low": "Baix"
 		},
-		"setReasoningLevel": "Activa l'esforç de raonament"
+		"setReasoningLevel": "Activa l'esforç de raonament",
+		"controlThinkingBudget": "Controlar pressupost de pensament",
+		"controlThinkingBudgetDescription": "Assegurar compatibilitat amb Claude"
 	},
 	"browser": {
 		"enable": {
