--- a/webview-ui/src/i18n/locales/de/settings.json
+++ b/webview-ui/src/i18n/locales/de/settings.json
@@ -259,7 +259,9 @@
 			"medium": "Mittel",
 			"low": "Niedrig"
 		},
-		"setReasoningLevel": "Denkaufwand aktivieren"
+		"setReasoningLevel": "Denkaufwand aktivieren",
+		"controlThinkingBudget": "Denkbudget kontrollieren",
+		"controlThinkingBudgetDescription": "Kompatibilität mit Claude sicherstellen"
 	},
 	"browser": {
 		"enable": {
