--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -259,7 +259,9 @@
 			"medium": "Medium",
 			"low": "Low"
 		},
-		"setReasoningLevel": "Enable Reasoning Effort"
+		"setReasoningLevel": "Enable Reasoning Effort",
+		"controlThinkingBudget": "Control ThinkingBudget",
+		"controlThinkingBudgetDescription": "Ensure compatible with Claude"
 	},
 	"browser": {
 		"enable": {
