--- a/webview-ui/src/i18n/locales/it/settings.json
+++ b/webview-ui/src/i18n/locales/it/settings.json
@@ -259,7 +259,9 @@
 			"medium": "Medio",
 			"low": "Basso"
 		},
-		"setReasoningLevel": "Abilita sforzo di ragionamento"
+		"setReasoningLevel": "Abilita sforzo di ragionamento",
+		"controlThinkingBudget": "Controlla budget di pensiero",
+		"controlThinkingBudgetDescription": "Assicura compatibilità con Claude"
 	},
 	"browser": {
 		"enable": {
