--- a/webview-ui/src/i18n/locales/nl/settings.json
+++ b/webview-ui/src/i18n/locales/nl/settings.json
@@ -259,7 +259,9 @@
 			"medium": "Middel",
 			"low": "Laag"
 		},
-		"setReasoningLevel": "Redeneervermogen inschakelen"
+		"setReasoningLevel": "Redeneervermogen inschakelen",
+		"controlThinkingBudget": "Denkbudget beheren",
+		"controlThinkingBudgetDescription": "Compatibiliteit met Claude verzekeren"
 	},
 	"browser": {
 		"enable": {
