--- a/webview-ui/src/i18n/locales/pl/settings.json
+++ b/webview-ui/src/i18n/locales/pl/settings.json
@@ -259,7 +259,9 @@
 			"medium": "Średni",
 			"low": "Niski"
 		},
-		"setReasoningLevel": "Włącz wysiłek rozumowania"
+		"setReasoningLevel": "Włącz wysiłek rozumowania",
+		"controlThinkingBudget": "Kontroluj budżet myślenia",
+		"controlThinkingBudgetDescription": "Zapewnij zgodność z Claude"
 	},
 	"browser": {
 		"enable": {
