Add profile header and done button to profile view

--- a/webview-ui/src/i18n/locales/ca/kilocode.json
+++ b/webview-ui/src/i18n/locales/ca/kilocode.json
@@ -25,6 +25,7 @@
 		}
 	},
 	"profile": {
+		"title": "Perfil",
 		"dashboard": "Tauler de control",
 		"logOut": "Tancar sessió",
 		"currentBalance": "SALDO ACTUAL",
