--- a/webview-ui/src/i18n/locales/hi/kilocode.json
+++ b/webview-ui/src/i18n/locales/hi/kilocode.json
@@ -34,6 +34,7 @@
 		"task": "कार्य"
 	},
 	"profile": {
+		"title": "प्रोफ़ाइल",
 		"dashboard": "डैशबोर्ड",
 		"logOut": "लॉग आउट",
 		"currentBalance": "वर्तमान बैलेंस",
