--- a/webview-ui/src/i18n/locales/it/kilocode.json
+++ b/webview-ui/src/i18n/locales/it/kilocode.json
@@ -34,6 +34,7 @@
 		"task": "Attività"
 	},
 	"profile": {
+		"title": "Profilo",
 		"dashboard": "Dashboard",
 		"logOut": "Disconnetti",
 		"currentBalance": "SALDO ATTUALE",
