--- a/webview-ui/src/i18n/locales/fr/kilocode.json
+++ b/webview-ui/src/i18n/locales/fr/kilocode.json
@@ -34,6 +34,7 @@
 		"task": "Tâche"
 	},
 	"profile": {
+		"title": "Profil",
 		"dashboard": "Tableau de bord",
 		"logOut": "Se déconnecter",
 		"currentBalance": "SOLDE ACTUEL",
