--- a/webview-ui/src/i18n/locales/id/kilocode.json
+++ b/webview-ui/src/i18n/locales/id/kilocode.json
@@ -34,6 +34,7 @@
 		"task": "Tugas"
 	},
 	"profile": {
+		"title": "Profil",
 		"dashboard": "Dashboard",
 		"logOut": "Keluar",
 		"currentBalance": "SALDO SAAT INI",
