--- a/webview-ui/src/i18n/locales/ja/kilocode.json
+++ b/webview-ui/src/i18n/locales/ja/kilocode.json
@@ -34,6 +34,7 @@
 		"task": "タスク"
 	},
 	"profile": {
+		"title": "プロフィール",
 		"dashboard": "ダッシュボード",
 		"logOut": "ログアウト",
 		"currentBalance": "現在の残高",
