--- a/webview-ui/src/i18n/locales/nl/kilocode.json
+++ b/webview-ui/src/i18n/locales/nl/kilocode.json
@@ -34,6 +34,7 @@
 		"task": "Taak"
 	},
 	"profile": {
+		"title": "Profiel",
 		"dashboard": "Dashboard",
 		"logOut": "Uitloggen",
 		"currentBalance": "HUIDIG SALDO",
