--- a/webview-ui/src/i18n/locales/pt-BR/kilocode.json
+++ b/webview-ui/src/i18n/locales/pt-BR/kilocode.json
@@ -34,6 +34,7 @@
 		"task": "Tarefa"
 	},
 	"profile": {
+		"title": "Perfil",
 		"dashboard": "Painel",
 		"logOut": "Sair",
 		"currentBalance": "SALDO ATUAL",
