--- a/webview-ui/src/i18n/locales/ru/kilocode.json
+++ b/webview-ui/src/i18n/locales/ru/kilocode.json
@@ -34,6 +34,7 @@
 		"task": "Задача"
 	},
 	"profile": {
+		"title": "Профиль",
 		"dashboard": "Панель управления",
 		"logOut": "Выйти",
 		"currentBalance": "ТЕКУЩИЙ БАЛАНС",
