--- a/webview-ui/src/i18n/locales/tr/kilocode.json
+++ b/webview-ui/src/i18n/locales/tr/kilocode.json
@@ -34,6 +34,7 @@
 		"task": "Görev"
 	},
 	"profile": {
+		"title": "Profil",
 		"dashboard": "Kontrol Paneli",
 		"logOut": "Çıkış Yap",
 		"currentBalance": "MEVCUT BAKİYE",
