--- a/webview-ui/src/i18n/locales/vi/kilocode.json
+++ b/webview-ui/src/i18n/locales/vi/kilocode.json
@@ -34,6 +34,7 @@
 		"task": "Nhiệm vụ"
 	},
 	"profile": {
+		"title": "Hồ sơ",
 		"dashboard": "Bảng điều khiển",
 		"logOut": "Đăng xuất",
 		"currentBalance": "SỐ DƯ HIỆN TẠI",
