#611 Customer Support Visibility

--- a/src/i18n/locales/de/common.json
+++ b/src/i18n/locales/de/common.json
@@ -13,7 +13,8 @@
 		"description": "Wir würden gerne Ihr Feedback hören oder Ihnen bei Problemen helfen, die Sie erleben.",
 		"githubIssues": "Ein Problem auf GitHub melden",
 		"githubDiscussions": "An GitHub-Diskussionen teilnehmen",
-		"discord": "Treten Sie unserer Discord-Community bei"
+		"discord": "Treten Sie unserer Discord-Community bei",
+		"customerSupport": "Kundensupport"
 	},
 	"welcome": "Willkommen, {{name}}! Du hast {{count}} Benachrichtigungen.",
 	"items": {
