--- a/src/i18n/locales/hi/common.json
+++ b/src/i18n/locales/hi/common.json
@@ -13,7 +13,8 @@
 		"description": "हम आपकी प्रतिक्रिया सुनना चाहेंगे या आपके द्वारा अनुभव की जा रही किसी भी समस्या में मदद करना चाहेंगे।",
 		"githubIssues": "GitHub पर समस्या की रिपोर्ट करें",
 		"githubDiscussions": "GitHub चर्चाओं में शामिल हों",
-		"discord": "हमारे Discord समुदाय में शामिल हों"
+		"discord": "हमारे Discord समुदाय में शामिल हों",
+		"customerSupport": "ग्राहक सहायता"
 	},
 	"welcome": "स्वागत है, {{name}}! आपके पास {{count}} सूचनाएँ हैं।",
 	"items": {
