--- a/src/i18n/locales/id/common.json
+++ b/src/i18n/locales/id/common.json
@@ -13,7 +13,8 @@
 		"description": "Kami ingin mendengar feedback kamu atau membantu dengan masalah yang kamu alami.",
 		"githubIssues": "Laporkan masalah di GitHub",
 		"githubDiscussions": "Bergabung dengan diskusi GitHub",
-		"discord": "Bergabung dengan komunitas Discord kami"
+		"discord": "Bergabung dengan komunitas Discord kami",
+		"customerSupport": "Dukungan Pelanggan"
 	},
 	"welcome": "Selamat datang, {{name}}! Kamu punya {{count}} notifikasi.",
 	"items": {
