--- a/src/i18n/locales/ja/common.json
+++ b/src/i18n/locales/ja/common.json
@@ -13,7 +13,8 @@
 		"description": "あなたのフィードバックをお聞かせいただくか、あなたが経験している問題についてお手伝いします。",
 		"githubIssues": "GitHubで問題を報告する",
 		"githubDiscussions": "GitHubのディスカッションに参加する",
-		"discord": "Discordコミュニティに参加する"
+		"discord": "Discordコミュニティに参加する",
+		"customerSupport": "カスタマーサポート"
 	},
 	"welcome": "ようこそ、{{name}}さん！{{count}}件の通知があります。",
 	"items": {
