--- a/src/i18n/locales/pt-BR/common.json
+++ b/src/i18n/locales/pt-BR/common.json
@@ -17,7 +17,8 @@
 		"description": "Gostaríamos de ouvir seu feedback ou ajudar com quaisquer problemas que você esteja enfrentando.",
 		"githubIssues": "Reportar um problema no GitHub",
 		"githubDiscussions": "Participar das discussões no GitHub",
-		"discord": "Junte-se à nossa comunidade no Discord"
+		"discord": "Junte-se à nossa comunidade no Discord",
+		"customerSupport": "Suporte ao Cliente"
 	},
 	"welcome": "Bem-vindo(a), {{name}}! Você tem {{count}} notificações.",
 	"items": {
