--- a/webview-ui/src/i18n/locales/nl/common.json
+++ b/webview-ui/src/i18n/locales/nl/common.json
@@ -9,7 +9,8 @@
 		"description": "We horen graag uw feedback of helpen u graag met eventuele problemen die u ondervindt.",
 		"githubIssues": "Meld een probleem op GitHub",
 		"githubDiscussions": "Neem deel aan GitHub-discussies",
-		"discord": "Word lid van onze Discord-community"
+		"discord": "Word lid van onze Discord-community",
+		"customerSupport": "Klantenservice"
 	},
 	"ui": {
 		"search_placeholder": "Zoeken..."
