--- a/webview-ui/src/i18n/locales/ru/common.json
+++ b/webview-ui/src/i18n/locales/ru/common.json
@@ -9,7 +9,8 @@
 		"description": "Мы будем рады услышать ваши отзывы или помочь с любыми проблемами, которые у вас возникают.",
 		"githubIssues": "Сообщить о проблеме на GitHub",
 		"githubDiscussions": "Присоединиться к обсуждениям на GitHub",
-		"discord": "Присоединиться к нашему сообществу в Discord"
+		"discord": "Присоединиться к нашему сообществу в Discord",
+		"customerSupport": "Служба поддержки"
 	},
 	"ui": {
 		"search_placeholder": "Поиск..."
