--- a/webview-ui/src/i18n/locales/tr/common.json
+++ b/webview-ui/src/i18n/locales/tr/common.json
@@ -9,7 +9,8 @@
 		"description": "Geri bildirimlerinizi duymak veya yaşadığınız sorunlarda size yardımcı olmak isteriz.",
 		"githubIssues": "GitHub'da bir sorun bildirin",
 		"githubDiscussions": "GitHub tartışmalarına katılın",
-		"discord": "Discord topluluğumuza katılın"
+		"discord": "Discord topluluğumuza katılın",
+		"customerSupport": "Müşteri Desteği"
 	},
 	"ui": {
 		"search_placeholder": "Ara..."
