--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -13,7 +13,8 @@
 		"description": "We'd love to hear your feedback or help with any issues you're experiencing.",
 		"githubIssues": "Report an issue on GitHub",
 		"githubDiscussions": "Join GitHub discussions",
-		"discord": "Join our Discord community"
+		"discord": "Join our Discord community",
+		"customerSupport": "Customer Support"
 	},
 	"welcome": "Welcome, {{name}}! You have {{count}} notifications.",
 	"items": {
