--- a/src/i18n/locales/es/common.json
+++ b/src/i18n/locales/es/common.json
@@ -13,7 +13,8 @@
 		"description": "Nos encantaría escuchar tus comentarios o ayudarte con cualquier problema que estés experimentando.",
 		"githubIssues": "Reportar un problema en GitHub",
 		"githubDiscussions": "Unirse a las discusiones de GitHub",
-		"discord": "Únete a nuestra comunidad de Discord"
+		"discord": "Únete a nuestra comunidad de Discord",
+		"customerSupport": "Soporte al Cliente"
 	},
 	"welcome": "¡Bienvenido, {{name}}! Tienes {{count}} notificaciones.",
 	"items": {
