--- a/src/i18n/locales/nl/common.json
+++ b/src/i18n/locales/nl/common.json
@@ -13,7 +13,8 @@
 		"description": "We horen graag uw feedback of helpen u graag met eventuele problemen die u ondervindt.",
 		"githubIssues": "Meld een probleem op GitHub",
 		"githubDiscussions": "Neem deel aan GitHub-discussies",
-		"discord": "Word lid van onze Discord-community"
+		"discord": "Word lid van onze Discord-community",
+		"customerSupport": "Klantenservice"
 	},
 	"welcome": "Welkom, {{name}}! Je hebt {{count}} meldingen.",
 	"items": {
