--- a/src/i18n/locales/pl/common.json
+++ b/src/i18n/locales/pl/common.json
@@ -13,7 +13,8 @@
 		"description": "Chcielibyśmy usłyszeć Twoje opinie lub pomóc Ci z problemami, których doświadczasz.",
 		"githubIssues": "Zgłoś problem na GitHubie",
 		"githubDiscussions": "Dołącz do dyskusji na GitHubie",
-		"discord": "Dołącz do naszej społeczności Discord"
+		"discord": "Dołącz do naszej społeczności Discord",
+		"customerSupport": "Obsługa Klienta"
 	},
 	"welcome": "Witaj, {{name}}! Masz {{count}} powiadomień.",
 	"items": {
