--- a/src/i18n/locales/ru/common.json
+++ b/src/i18n/locales/ru/common.json
@@ -13,7 +13,8 @@
 		"description": "Мы будем рады услышать ваши отзывы или помочь с любыми проблемами, которые у вас возникают.",
 		"githubIssues": "Сообщить о проблеме на GitHub",
 		"githubDiscussions": "Присоединиться к обсуждениям на GitHub",
-		"discord": "Присоединиться к нашему сообществу в Discord"
+		"discord": "Присоединиться к нашему сообществу в Discord",
+		"customerSupport": "Служба поддержки"
 	},
 	"welcome": "Добро пожаловать, {{name}}! У вас {{count}} уведомлений.",
 	"items": {
