--- a/src/i18n/locales/vi/common.json
+++ b/src/i18n/locales/vi/common.json
@@ -13,7 +13,8 @@
 		"description": "Chúng tôi rất muốn nghe phản hồi của bạn hoặc giúp bạn với bất kỳ vấn đề nào bạn đang gặp phải.",
 		"githubIssues": "Báo cáo vấn đề trên GitHub",
 		"githubDiscussions": "Tham gia thảo luận trên GitHub",
-		"discord": "Tham gia cộng đồng Discord của chúng tôi"
+		"discord": "Tham gia cộng đồng Discord của chúng tôi",
+		"customerSupport": "Hỗ trợ khách hàng"
 	},
 	"welcome": "Chào mừng, {{name}}! Bạn có {{count}} thông báo.",
 	"items": {
