--- a/webview-ui/src/i18n/locales/ca/common.json
+++ b/webview-ui/src/i18n/locales/ca/common.json
@@ -9,7 +9,8 @@
 		"description": "Ens encantaria escoltar els teus comentaris o ajudar-te amb qualsevol problema que estiguis experimentant.",
 		"githubIssues": "Informa d'un problema a GitHub",
 		"githubDiscussions": "Uneix-te a les discussions de GitHub",
-		"discord": "Uneix-te a la nostra comunitat de Discord"
+		"discord": "Uneix-te a la nostra comunitat de Discord",
+		"customerSupport": "Suport al Client"
 	},
 	"ui": {
 		"search_placeholder": "Cerca..."
