--- a/webview-ui/src/i18n/locales/de/common.json
+++ b/webview-ui/src/i18n/locales/de/common.json
@@ -9,7 +9,8 @@
 		"description": "Wir würden gerne Ihr Feedback hören oder Ihnen bei Problemen helfen, die Sie erleben.",
 		"githubIssues": "Ein Problem auf GitHub melden",
 		"githubDiscussions": "An GitHub-Diskussionen teilnehmen",
-		"discord": "Treten Sie unserer Discord-Community bei"
+		"discord": "Treten Sie unserer Discord-Community bei",
+		"customerSupport": "Kundensupport"
 	},
 	"ui": {
 		"search_placeholder": "Suchen..."
