--- a/webview-ui/src/i18n/locales/en/common.json
+++ b/webview-ui/src/i18n/locales/en/common.json
@@ -9,7 +9,8 @@
 		"description": "We'd love to hear your feedback or help with any issues you're experiencing.",
 		"githubIssues": "Report an issue on GitHub",
 		"githubDiscussions": "Join GitHub discussions",
-		"discord": "Join our Discord community"
+		"discord": "Join our Discord community",
+		"customerSupport": "Customer Support"
 	},
 	"ui": {
 		"search_placeholder": "Search..."
