--- a/webview-ui/src/i18n/locales/fr/common.json
+++ b/webview-ui/src/i18n/locales/fr/common.json
@@ -9,7 +9,8 @@
 		"description": "Nous aimerions recevoir vos commentaires ou vous aider avec tout problème que vous rencontrez.",
 		"githubIssues": "Signaler un problème sur GitHub",
 		"githubDiscussions": "Rejoindre les discussions GitHub",
-		"discord": "Rejoindre notre communauté Discord"
+		"discord": "Rejoindre notre communauté Discord",
+		"customerSupport": "Support Client"
 	},
 	"ui": {
 		"search_placeholder": "Rechercher..."
