--- a/webview-ui/src/i18n/locales/ja/common.json
+++ b/webview-ui/src/i18n/locales/ja/common.json
@@ -9,7 +9,8 @@
 		"description": "あなたのフィードバックをお聞かせいただくか、あなたが経験している問題についてお手伝いします。",
 		"githubIssues": "GitHubで問題を報告する",
 		"githubDiscussions": "GitHubのディスカッションに参加する",
-		"discord": "Discordコミュニティに参加する"
+		"discord": "Discordコミュニティに参加する",
+		"customerSupport": "カスタマーサポート"
 	},
 	"ui": {
 		"search_placeholder": "検索..."
