--- a/webview-ui/src/i18n/locales/zh-TW/common.json
+++ b/webview-ui/src/i18n/locales/zh-TW/common.json
@@ -9,7 +9,8 @@
 		"description": "我們很樂意聽取您的反饋或幫助您解決遇到的任何問題。",
 		"githubIssues": "在GitHub上報告問題",
 		"githubDiscussions": "加入GitHub討論",
-		"discord": "加入我們的Discord社區"
+		"discord": "加入我們的Discord社區",
+		"customerSupport": "客戶支援"
 	},
 	"ui": {
 		"search_placeholder": "搜尋..."
