--- a/webview-ui/src/i18n/locales/it/history.json
+++ b/webview-ui/src/i18n/locales/it/history.json
@@ -35,5 +35,6 @@
 	"confirmDeleteTasks": "Sei sicuro di voler eliminare {{count}} attività?",
 	"deleteTasksWarning": "Le attività eliminate non possono essere recuperate. Assicurati di voler continuare.",
 	"deleteItems": "Elimina {{count}} elementi",
-	"showAllWorkspaces": "Mostra attività da tutti gli spazi di lavoro"
+	"showAllWorkspaces": "Mostra attività da tutti gli spazi di lavoro",
+	"showFavoritesOnly": "Mostra solo preferiti"
 }
