--- a/webview-ui/src/i18n/locales/de/history.json
+++ b/webview-ui/src/i18n/locales/de/history.json
@@ -35,5 +35,6 @@
 	"confirmDeleteTasks": "Bist du sicher, dass du {{count}} Aufgaben löschen möchtest?",
 	"deleteTasksWarning": "Gelöschte Aufgaben können nicht wiederhergestellt werden. Bitte vergewissere dich, dass du fortfahren möchtest.",
 	"deleteItems": "{{count}} Elemente löschen",
-	"showAllWorkspaces": "Aufgaben aus allen Arbeitsbereichen anzeigen"
+	"showAllWorkspaces": "Aufgaben aus allen Arbeitsbereichen anzeigen",
+	"showFavoritesOnly": "Nur Favoriten anzeigen"
 }
