--- a/webview-ui/src/i18n/locales/fr/history.json
+++ b/webview-ui/src/i18n/locales/fr/history.json
@@ -35,5 +35,6 @@
 	"confirmDeleteTasks": "Êtes-vous sûr de vouloir supprimer {{count}} tâches ?",
 	"deleteTasksWarning": "Les tâches supprimées ne peuvent pas être récupérées. Veuillez confirmer que vous souhaitez continuer.",
 	"deleteItems": "Supprimer {{count}} éléments",
-	"showAllWorkspaces": "Afficher les tâches de tous les espaces de travail"
+	"showAllWorkspaces": "Afficher les tâches de tous les espaces de travail",
+	"showFavoritesOnly": "Afficher uniquement les favoris"
 }
