--- a/webview-ui/src/i18n/locales/hi/history.json
+++ b/webview-ui/src/i18n/locales/hi/history.json
@@ -35,5 +35,6 @@
 	"confirmDeleteTasks": "क्या आप वाकई {{count}} कार्य हटाना चाहते हैं?",
 	"deleteTasksWarning": "हटाए गए कार्य पुनर्प्राप्त नहीं किए जा सकते। कृपया सुनिश्चित करें कि आप आगे बढ़ना चाहते हैं।",
 	"deleteItems": "{{count}} आइटम हटाएं",
-	"showAllWorkspaces": "सभी वर्कस्पेस से कार्य दिखाएं"
+	"showAllWorkspaces": "सभी वर्कस्पेस से कार्य दिखाएं",
+	"showFavoritesOnly": "केवल पसंदीदा दिखाएं"
 }
