--- a/webview-ui/src/i18n/locales/pt-BR/history.json
+++ b/webview-ui/src/i18n/locales/pt-BR/history.json
@@ -35,5 +35,6 @@
 	"confirmDeleteTasks": "Tem certeza que deseja excluir {{count}} tarefas?",
 	"deleteTasksWarning": "As tarefas excluídas não podem ser recuperadas. Por favor, certifique-se de que deseja prosseguir.",
 	"deleteItems": "Excluir {{count}} itens",
-	"showAllWorkspaces": "Mostrar tarefas de todos os espaços de trabalho"
+	"showAllWorkspaces": "Mostrar tarefas de todos os espaços de trabalho",
+	"showFavoritesOnly": "Mostrar apenas favoritos"
 }
