--- a/webview-ui/src/i18n/locales/ru/history.json
+++ b/webview-ui/src/i18n/locales/ru/history.json
@@ -35,5 +35,6 @@
 	"confirmDeleteTasks": "Вы уверены, что хотите удалить {{count}} задач?",
 	"deleteTasksWarning": "Удалённые задачи не могут быть восстановлены. Пожалуйста, убедитесь, что хотите продолжить.",
 	"deleteItems": "Удалить {{count}} элементов",
-	"showAllWorkspaces": "Показать задачи из всех рабочих пространств"
+	"showAllWorkspaces": "Показать задачи из всех рабочих пространств",
+	"showFavoritesOnly": "Показать только избранное"
 }
