--- a/webview-ui/src/i18n/locales/tr/history.json
+++ b/webview-ui/src/i18n/locales/tr/history.json
@@ -35,5 +35,6 @@
 	"confirmDeleteTasks": "{{count}} görevi silmek istediğinizden emin misiniz?",
 	"deleteTasksWarning": "Silinen görevler geri alınamaz. Lütfen devam etmek istediğinizden emin olun.",
 	"deleteItems": "{{count}} Öğeyi Sil",
-	"showAllWorkspaces": "Tüm çalışma alanlarından görevleri göster"
+	"showAllWorkspaces": "Tüm çalışma alanlarından görevleri göster",
+	"showFavoritesOnly": "Sadece favorileri göster"
 }
