--- a/webview-ui/src/i18n/locales/en/history.json
+++ b/webview-ui/src/i18n/locales/en/history.json
@@ -22,6 +22,8 @@
 	"exportTask": "Export Task",
 	"deleteTask": "Delete Task",
 	"deleteTaskMessage": "Are you sure you want to delete this task? This action cannot be undone.",
+	"deleteTaskFavoritedWarning": "This task is favorited. Are you sure you want to delete it?",
+	"deleteTasksFavoritedWarning": "{{count}} of the selected tasks are favorited. Are you sure you want to delete them?",
 	"cancel": "Cancel",
 	"delete": "Delete",
 	"exitSelection": "Exit Selection",
