--- a/webview-ui/src/i18n/locales/id/history.json
+++ b/webview-ui/src/i18n/locales/id/history.json
@@ -34,6 +34,8 @@
 	"deleteTasks": "Hapus Tugas",
 	"confirmDeleteTasks": "Apakah kamu yakin ingin menghapus {{count}} tugas?",
 	"deleteTasksWarning": "Tugas yang dihapus tidak dapat dipulihkan. Pastikan kamu ingin melanjutkan.",
+	"deleteTaskFavoritedWarning": "Tugas ini telah ditandai sebagai favorit. Apakah kamu yakin ingin menghapusnya?",
+	"deleteTasksFavoritedWarning": "{{count}} tugas yang dipilih telah ditandai sebagai favorit. Apakah kamu yakin ingin menghapusnya?",
 	"deleteItems": "Hapus {{count}} Item",
 	"showAllWorkspaces": "Tampilkan tugas dari semua workspace",
 	"showFavoritesOnly": "Tampilkan hanya favorit"
