--- a/webview-ui/src/i18n/locales/tr/history.json
+++ b/webview-ui/src/i18n/locales/tr/history.json
@@ -34,6 +34,8 @@
 	"deleteTasks": "Görevleri Sil",
 	"confirmDeleteTasks": "{{count}} görevi silmek istediğinizden emin misiniz?",
 	"deleteTasksWarning": "Silinen görevler geri alınamaz. Lütfen devam etmek istediğinizden emin olun.",
+	"deleteTaskFavoritedWarning": "Bu görev favoriye eklendi. Silmek istediğinizden emin misiniz?",
+	"deleteTasksFavoritedWarning": "{{count}} görev favoriye eklendi. Silmek istediğinizden emin misiniz?",
 	"deleteItems": "{{count}} Öğeyi Sil",
 	"showAllWorkspaces": "Tüm çalışma alanlarından görevleri göster",
 	"showFavoritesOnly": "Sadece favorileri göster"
