--- a/webview-ui/src/i18n/locales/pl/history.json
+++ b/webview-ui/src/i18n/locales/pl/history.json
@@ -37,5 +37,6 @@
 	"deleteTaskFavoritedWarning": "To zadanie jest ulubione. Czy na pewno chcesz je usunąć?",
 	"deleteTasksFavoritedWarning": "{{count}} zadań jest ulubionych. Czy na pewno chcesz je usunąć?",
 	"deleteItems": "Usuń {{count}} elementów",
-	"showAllWorkspaces": "Pokaż zadania ze wszystkich przestrzeni roboczych"
+	"showAllWorkspaces": "Pokaż zadania ze wszystkich przestrzeni roboczych",
+	"showFavoritesOnly": "Pokaż tylko ulubione"
 }
