--- a/src/i18n/locales/ru/kilocode.json
+++ b/src/i18n/locales/ru/kilocode.json
@@ -5,5 +5,17 @@
 	"lowCreditWarning": {
 		"title": "Предупреждение о низком балансе!",
 		"message": "Проверьте, можете ли вы пополнить счет бесплатными кредитами или приобрести дополнительные!"
+	},
+	"commitMessage": {
+		"activated": "Генератор сообщений о коммитах Kilo Code активирован",
+		"gitNotFound": "⚠️ Git-репозиторий не найден или git недоступен",
+		"gitInitError": "⚠️ Ошибка инициализации Git: {{error}}",
+		"generating": "Kilo: Создание сообщения коммита...",
+		"analyzingChanges": "Kilo: Анализ промежуточных изменений...",
+		"noStagedChangesRepo": "Kilo: Подготовленные изменения не найдены в git-репозитории",
+		"noStagedChanges": "Kilo: Не найдено изменений для анализа",
+		"generated": "Kilo: Сообщение коммита сгенерировано!",
+		"generationFailed": "Kilo: Не удалось сгенерировать сообщение коммита: {{errorMessage}}",
+		"tokenRequired": "Для генерации сообщения коммита требуется токен Kilo Code"
 	}
 }
