--- a/src/i18n/locales/hi/kilocode.json
+++ b/src/i18n/locales/hi/kilocode.json
@@ -16,6 +16,8 @@
 		"noStagedChanges": "किलो: विश्लेषण के लिए कोई स्टेज्ड परिवर्तन नहीं मिला",
 		"generated": "किलो: कमिट संदेश उत्पन्न किया गया!",
 		"generationFailed": "किलो: कमिट संदेश उत्पन्न करने में विफल: {{errorMessage}}",
-		"tokenRequired": "कमिट संदेश निर्माण के लिए किलो कोड टोकन आवश्यक है"
+		"tokenRequired": "कमिट संदेश निर्माण के लिए किलो कोड टोकन आवश्यक है",
+		"activationFailed": "किलो: कमिट संदेश प्रदाता को सक्रिय करने में विफल: {{error}}",
+		"providerRegistered": "किलो: प्रतिबद्ध संदेश प्रदाता पंजीकृत"
 	}
 }
