--- a/src/i18n/locales/nl/kilocode.json
+++ b/src/i18n/locales/nl/kilocode.json
@@ -16,6 +16,8 @@
 		"noStagedChanges": "Kilo: Geen gefaseerde wijzigingen gevonden om te analyseren",
 		"generated": "Kilo: Commit-bericht gegenereerd!",
 		"generationFailed": "Kilo: Mislukt om commit-bericht te genereren: {{errorMessage}}",
-		"tokenRequired": "Kilo Code token is vereist voor het genereren van commit berichten"
+		"tokenRequired": "Kilo Code token is vereist voor het genereren van commit berichten",
+		"activationFailed": "Kilo: Kon berichtverstrekker voor commits niet activeren: {{error}}",
+		"providerRegistered": "Kilo: Commit message provider geregistreerd"
 	}
 }
