--- a/src/i18n/locales/de/kilocode.json
+++ b/src/i18n/locales/de/kilocode.json
@@ -16,6 +16,8 @@
 		"noStagedChanges": "Kilo: Keine bereitgestellten Änderungen zur Analyse gefunden",
 		"generated": "Kilo: Commit-Nachricht generiert!",
 		"generationFailed": "Kilo: Fehler beim Generieren der Commit-Nachricht: {{errorMessage}}",
-		"tokenRequired": "Kilo Code-Token wird für die Generierung von Commit-Nachrichten benötigt"
+		"tokenRequired": "Kilo Code-Token wird für die Generierung von Commit-Nachrichten benötigt",
+		"activationFailed": "Kilo: Fehler beim Aktivieren des Commit-Nachrichtenanbieters: {{error}}",
+		"providerRegistered": "Kilo: Anbieter für Commit-Nachrichten registriert"
 	}
 }
