--- a/src/i18n/locales/fr/kilocode.json
+++ b/src/i18n/locales/fr/kilocode.json
@@ -16,6 +16,8 @@
 		"noStagedChanges": "Kilo : Aucune modification en attente trouvée à analyser",
 		"generated": "Kilo : Message de commit généré !",
 		"generationFailed": "Kilo : Échec de génération du message de commit : {{errorMessage}}",
-		"tokenRequired": "Le jeton Kilo Code est requis pour la génération de messages de commit"
+		"tokenRequired": "Le jeton Kilo Code est requis pour la génération de messages de commit",
+		"activationFailed": "Kilo : Échec de l'activation du fournisseur de messages de commit : {{error}}",
+		"providerRegistered": "Kilo : Fournisseur de messages de commit enregistré"
 	}
 }
