--- a/webview-ui/src/i18n/locales/en/kilocode.json
+++ b/webview-ui/src/i18n/locales/en/kilocode.json
@@ -63,6 +63,10 @@
 			"workspaceRules": "Workspace Rules",
 			"globalWorkflows": "Global Workflows",
 			"workspaceWorkflows": "Workspace Workflows"
+		},
+		"emptyState": {
+			"noRulesFound": "No rules found",
+			"noWorkflowsFound": "No workflows found"
 		}
 	}
 }
