--- a/webview-ui/src/i18n/locales/en/kilocode.json
+++ b/webview-ui/src/i18n/locales/en/kilocode.json
@@ -67,6 +67,9 @@
 		"emptyState": {
 			"noRulesFound": "No rules found",
 			"noWorkflowsFound": "No workflows found"
+		},
+		"validation": {
+			"invalidFileExtension": "Only .md, .txt, or no file extension allowed"
 		}
 	}
 }
